Reworked index.org for README

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-09-09 Do 17:56 -->
+<!-- 2021-09-09 Do 23:43 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The Comprehensive APDL-Mode Documentation</title>
@@ -248,32 +248,29 @@ for the JavaScript code in this tag.
 </div><div id="content">
 <h1 class="title">The Comprehensive APDL-Mode Documentation</h1>
 
-<div id="outline-container-org32dd234" class="outline-2">
-<h2 id="org32dd234"><span class="section-number-2">1</span> Introduction</h2>
+<div id="outline-container-orgcdfcea1" class="outline-2">
+<h2 id="orgcdfcea1"><span class="section-number-2">1</span> Introduction</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-HTML: <a href="info/README.html">README</a>
+HTML: <a href="README.html">README</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org26214f2" class="outline-2">
-<h2 id="org26214f2"><span class="section-number-2">2</span> Tutorials</h2>
+<div id="outline-container-org5cb2f00" class="outline-2">
+<h2 id="org5cb2f00"><span class="section-number-2">2</span> Tutorials</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org687286f" class="outline-3">
-<h3 id="org687286f"><span class="section-number-3">2.1</span> Introductory</h3>
+<div id="outline-container-orgecce192" class="outline-3">
+<h3 id="orgecce192"><span class="section-number-3">2.1</span> Introductory</h3>
 <div class="outline-text-3" id="text-2-1">
-<p>
-APDL-Mode introductory tutorial
-</p>
 <ul class="org-ul">
 <li>PDF: <a href="doc/A-M_introductory_tutorial.pdf">Tutorial</a></li>
 <li>HTML: <a href="doc/A-M_introductory_tutorial.html">Tutorial</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgd089c81" class="outline-3">
-<h3 id="orgd089c81"><span class="section-number-3">2.2</span> In-depth</h3>
+<div id="outline-container-orgcae74f7" class="outline-3">
+<h3 id="orgcae74f7"><span class="section-number-3">2.2</span> In-depth</h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>HTML: <a href="doc/A-M_in-depth_tutorial.html">In-depth Tutorial</a></li>
@@ -281,8 +278,8 @@ APDL-Mode introductory tutorial
 </div>
 </div>
 </div>
-<div id="outline-container-org00d91cd" class="outline-2">
-<h2 id="org00d91cd"><span class="section-number-2">3</span> Reference Manuals</h2>
+<div id="outline-container-orgc71c566" class="outline-2">
+<h2 id="orgc71c566"><span class="section-number-2">3</span> Reference Manuals</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li>HTML: The Apdl-Mode <a href="doc/A-M_APDL_reference.html">Highlighting and APDL reference</a>.</li>
