--- a/info/TODO.html
+++ b/info/TODO.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-09-09 Do 17:53 -->
+<!-- 2021-09-09 Do 23:43 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -272,33 +272,30 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org734e80c">1. <span class="todo TODO">TODO</span> Version 20.6.0</a></li>
-<li><a href="#orge56c8ec">2. <span class="done DONE">DONE</span> Version 20.5.0</a></li>
-<li><a href="#org6199140">3. <span class="done DONE">DONE</span> Version 20.4.0</a></li>
-<li><a href="#orgd47b8c7">4. <span class="done DONE">DONE</span> Version 20.3.0</a></li>
-<li><a href="#org7fe1766">5. <span class="done DONE">DONE</span> Version 20.2.0</a></li>
-<li><a href="#orgbbba238">6. <span class="done DONE">DONE</span> Version 20.1.1</a></li>
-<li><a href="#orge48be24">7. Version 162-2</a></li>
+<li><a href="#orga556ee1">1. <span class="todo TODO">TODO</span> Version 20.6.0</a></li>
+<li><a href="#org13c0f2f">2. <span class="done DONE">DONE</span> Version 20.5.0</a></li>
+<li><a href="#org6d9b736">3. <span class="done DONE">DONE</span> Version 20.4.0</a></li>
+<li><a href="#org0304a8f">4. <span class="done DONE">DONE</span> Version 20.3.0</a></li>
+<li><a href="#org1ab6b2a">5. <span class="done DONE">DONE</span> Version 20.2.0</a></li>
+<li><a href="#org0ed73c1">6. <span class="done DONE">DONE</span> Version 20.1.1</a></li>
+<li><a href="#orgd30991e">7. Version 162-2</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org734e80c" class="outline-2">
-<h2 id="org734e80c"><span class="section-number-2">1</span> <span class="todo TODO">TODO</span> Version 20.6.0</h2>
+<div id="outline-container-orga556ee1" class="outline-2">
+<h2 id="orga556ee1"><span class="section-number-2">1</span> <span class="todo TODO">TODO</span> Version 20.6.0</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-Melpa: <span class="timestamp-wrapper"><span class="timestamp">[2021-08-09 Mo] </span></span> 481
-</p>
-
-<p>
-Melpa: <span class="timestamp-wrapper"><span class="timestamp">[2020-10-24 Sa] </span></span> 396 downloads
+Release end of October
 </p>
 </div>
-<div id="outline-container-orgca0fbef" class="outline-3">
-<h3 id="orgca0fbef"><span class="section-number-3">1.1</span> Todos, bugs</h3>
+<div id="outline-container-org621dbd7" class="outline-3">
+<h3 id="org621dbd7"><span class="section-number-3">1.1</span> Todos, bugs</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>APDL reference is incomplete</li>
+<li>HTML docu is bad</li>
 <li>Templates: Add intro help to the -wb-template system, complete
 usage.org
 <ul class="org-ul">
@@ -308,8 +305,8 @@ usage.org
 </ul>
 </div>
 </div>
-<div id="outline-container-orgcdbdf85" class="outline-3">
-<h3 id="orgcdbdf85"><span class="section-number-3">1.2</span> Issues</h3>
+<div id="outline-container-orgdcad266" class="outline-3">
+<h3 id="orgdcad266"><span class="section-number-3">1.2</span> Issues</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li>Discovery Aim is obsolete</li>
@@ -333,8 +330,8 @@ f,node(x,y,z),,,</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org3984859" class="outline-3">
-<h3 id="org3984859"><span class="section-number-3">1.3</span> Checks</h3>
+<div id="outline-container-org828d5ad" class="outline-3">
+<h3 id="org828d5ad"><span class="section-number-3">1.3</span> Checks</h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li>Changed file size without warning to 30 MB what is Emacs-26
@@ -344,8 +341,8 @@ using?</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org98c224f" class="outline-3">
-<h3 id="org98c224f"><span class="section-number-3">1.4</span> Wishes</h3>
+<div id="outline-container-org5958786" class="outline-3">
+<h3 id="org5958786"><span class="section-number-3">1.4</span> Wishes</h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li>A better Info index</li>
@@ -357,8 +354,8 @@ all.</li>
 <li>Help system and docu, rather complete, except online docu</li>
 </ul>
 </div>
-<div id="outline-container-org5f810ba" class="outline-4">
-<h4 id="org5f810ba"><span class="section-number-4">1.4.1</span> Docu</h4>
+<div id="outline-container-org44fa075" class="outline-4">
+<h4 id="org44fa075"><span class="section-number-4">1.4.1</span> Docu</h4>
 <div class="outline-text-4" id="text-1-4-1">
 <p>
 Outdated menus in A-M-introductory<sub>tutorial.org</sub>
@@ -371,10 +368,7 @@ Rework the messy documentation system of files and applications
 <li>INFO -&gt; info/apdl-mode.org &lt;- flat file</li>
 <li>MD for github -&gt; info/README.org &lt;- uses folder structure</li>
 <li>Melpa packaging -&gt; apdl-mode</li>
-</ol>
 
-
-<ul class="org-ul">
 <li>Things like C-c C-jjj (more?) are not documented in manual!</li>
 <li>more C-c C-b subjects?
 2.1. SESSION Commands
@@ -400,7 +394,7 @@ resources!)</li>
 mule-utf-8-dos aka cp65001-dos, document this</li>
 <li>Customise system (explain `M-x customize-set-value' as long as
 (debbugs-gnu-bugs 25678) is not solved)?</li>
-</ul>
+</ol>
 
 <p>
 Info documentation:
@@ -430,7 +424,6 @@ Presentations
 </p>
 
 <ul class="org-ul">
-<li>update intro, first steps tutorial</li>
 <li>in-depth presentation, tutorial?</li>
 <li>APDL reference =&gt; just Info?</li>
 </ul>
@@ -444,8 +437,8 @@ MD
 </ul>
 </div>
 </div>
-<div id="outline-container-orgef1581b" class="outline-4">
-<h4 id="orgef1581b"><span class="section-number-4">1.4.2</span> templates</h4>
+<div id="outline-container-orgc0f9840" class="outline-4">
+<h4 id="orgc0f9840"><span class="section-number-4">1.4.2</span> templates</h4>
 <div class="outline-text-4" id="text-1-4-2">
 <ul class="org-ul">
 <li><p>
@@ -468,8 +461,8 @@ include ARG[1-9] optionally?</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org4239d73" class="outline-4">
-<h4 id="org4239d73"><span class="section-number-4">1.4.3</span> misc</h4>
+<div id="outline-container-org1a019c8" class="outline-4">
+<h4 id="org1a019c8"><span class="section-number-4">1.4.3</span> misc</h4>
 <div class="outline-text-4" id="text-1-4-3">
 <ol class="org-ol">
 <li>make <b>License</b> buffers read-only</li>
@@ -483,8 +476,8 @@ include ARG[1-9] optionally?</li>
 </div>
 </div>
 
-<div id="outline-container-org290d53a" class="outline-3">
-<h3 id="org290d53a"><span class="section-number-3">1.5</span> Done</h3>
+<div id="outline-container-org4cf01e0" class="outline-3">
+<h3 id="org4cf01e0"><span class="section-number-3">1.5</span> Done</h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li>Make text around #+texinfo: lines self sustained!</li>
@@ -493,11 +486,23 @@ include ARG[1-9] optionally?</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org74f14ad" class="outline-3">
-<h3 id="org74f14ad"><span class="section-number-3">1.6</span> Push and Release Proceedures</h3>
+<div id="outline-container-org0f94de6" class="outline-3">
+<h3 id="org0f94de6"><span class="section-number-3">1.6</span> Push and Release Proceedures</h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
-<li>make PACK : now obligatory for any push!!</li>
+<li>gh-pages : everything is in master! just copy index.html and
+README.html to root dir (in makefile)
+<ul class="org-ul">
+<li>In branch gh-pages: git checkout master .</li>
+<li>make GH</li>
+<li>git clean -f -d</li>
+<li>git checkout master</li>
+</ul></li>
+</ul>
+
+
+<ul class="org-ul">
+<li>make PACK : now obligatory for any push to Melpa!!</li>
 </ul>
 
 <p>
@@ -560,8 +565,8 @@ APDL<sub>PATCH</sub> := 0
 </div>
 </div>
 
-<div id="outline-container-orge56c8ec" class="outline-2">
-<h2 id="orge56c8ec"><span class="section-number-2">2</span> <span class="done DONE">DONE</span> Version 20.5.0</h2>
+<div id="outline-container-org13c0f2f" class="outline-2">
+<h2 id="org13c0f2f"><span class="section-number-2">2</span> <span class="done DONE">DONE</span> Version 20.5.0</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <span class="timestamp-wrapper"><span class="timestamp">[2020-05-01 Fr]</span></span>
@@ -569,8 +574,8 @@ help for all get- and parametric-functions
 </p>
 </div>
 </div>
-<div id="outline-container-org6199140" class="outline-2">
-<h2 id="org6199140"><span class="section-number-2">3</span> <span class="done DONE">DONE</span> Version 20.4.0</h2>
+<div id="outline-container-org6d9b736" class="outline-2">
+<h2 id="org6d9b736"><span class="section-number-2">3</span> <span class="done DONE">DONE</span> Version 20.4.0</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 <span class="timestamp-wrapper"><span class="timestamp">[2020-04-01 Mi]</span></span>
@@ -578,8 +583,8 @@ updated to 2020R1
 </p>
 </div>
 </div>
-<div id="outline-container-orgd47b8c7" class="outline-2">
-<h2 id="orgd47b8c7"><span class="section-number-2">4</span> <span class="done DONE">DONE</span> Version 20.3.0</h2>
+<div id="outline-container-org0304a8f" class="outline-2">
+<h2 id="org0304a8f"><span class="section-number-2">4</span> <span class="done DONE">DONE</span> Version 20.3.0</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 <span class="timestamp-wrapper"><span class="timestamp">[2020-03-24 Di]</span></span>
@@ -588,16 +593,16 @@ feature freeze <span class="timestamp-wrapper"><span class="timestamp">[2020-03-
 </p>
 </div>
 </div>
-<div id="outline-container-org7fe1766" class="outline-2">
-<h2 id="org7fe1766"><span class="section-number-2">5</span> <span class="done DONE">DONE</span> Version 20.2.0</h2>
+<div id="outline-container-org1ab6b2a" class="outline-2">
+<h2 id="org1ab6b2a"><span class="section-number-2">5</span> <span class="done DONE">DONE</span> Version 20.2.0</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 <span class="timestamp-wrapper"><span class="timestamp">[2020-03-10 Di]</span></span>
 </p>
 </div>
 </div>
-<div id="outline-container-orgbbba238" class="outline-2">
-<h2 id="orgbbba238"><span class="section-number-2">6</span> <span class="done DONE">DONE</span> Version 20.1.1</h2>
+<div id="outline-container-org0ed73c1" class="outline-2">
+<h2 id="org0ed73c1"><span class="section-number-2">6</span> <span class="done DONE">DONE</span> Version 20.1.1</h2>
 <div class="outline-text-2" id="text-6">
 <ul class="org-ul">
 <li>are the material properties documented, matlib?  Matlib is used
@@ -611,12 +616,12 @@ Done in matlib/README.org</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orge48be24" class="outline-2">
-<h2 id="orge48be24"><span class="section-number-2">7</span> Version 162-2</h2>
+<div id="outline-container-orgd30991e" class="outline-2">
+<h2 id="orgd30991e"><span class="section-number-2">7</span> Version 162-2</h2>
 <div class="outline-text-2" id="text-7">
 </div>
-<div id="outline-container-orgeb366b4" class="outline-3">
-<h3 id="orgeb366b4"><span class="section-number-3">7.1</span> Bugs</h3>
+<div id="outline-container-org6606a46" class="outline-3">
+<h3 id="org6606a46"><span class="section-number-3">7.1</span> Bugs</h3>
 <div class="outline-text-3" id="text-7-1">
 <ul class="org-ul">
 <li>Hmm, it's gone?  C-c C-s first time visit: User variables
@@ -641,8 +646,8 @@ Structural)</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org487f59d" class="outline-3">
-<h3 id="org487f59d"><span class="section-number-3">7.2</span> Wish-list</h3>
+<div id="outline-container-orgcd7e7cf" class="outline-3">
+<h3 id="orgcd7e7cf"><span class="section-number-3">7.2</span> Wish-list</h3>
 <div class="outline-text-3" id="text-7-2">
 <ul class="org-ul">
 <li>-send-to-ansys, -send-above copy empty regions or only comments</li>
@@ -759,8 +764,8 @@ self-documenting help system for a template function</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org4fedb90" class="outline-3">
-<h3 id="org4fedb90"><span class="section-number-3">7.3</span> Freeze</h3>
+<div id="outline-container-org9d4497b" class="outline-3">
+<h3 id="org9d4497b"><span class="section-number-3">7.3</span> Freeze</h3>
 <div class="outline-text-3" id="text-7-3">
 <ul class="org-ul">
 <li>Documentation of installation, usage and configuration!
@@ -773,8 +778,8 @@ self-documenting help system for a template function</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgf51ffba" class="outline-3">
-<h3 id="orgf51ffba"><span class="section-number-3">7.4</span> Deficiencies:</h3>
+<div id="outline-container-org0916a18" class="outline-3">
+<h3 id="org0916a18"><span class="section-number-3">7.4</span> Deficiencies:</h3>
 <div class="outline-text-3" id="text-7-4">
 <dl class="org-dl">
 <dt>Highlighting</dt><dd>Experimental user variable highlighting
@@ -812,8 +817,8 @@ is only inserted upcased.</dd>
 </div>
 </div>
 
-<div id="outline-container-org0779931" class="outline-3">
-<h3 id="org0779931"><span class="section-number-3">7.5</span> Procedures</h3>
+<div id="outline-container-orge1329b7" class="outline-3">
+<h3 id="orge1329b7"><span class="section-number-3">7.5</span> Procedures</h3>
 <div class="outline-text-3" id="text-7-5">
 <dl class="org-dl">
 <dt>GNU-Linux</dt><dd>instead of GNU/Linux as FSF suggesting ;-)</dd>
@@ -832,8 +837,8 @@ GH-wiki is repo with write access for world, separate from the A-M repo!
 </div>
 </div>
 
-<div id="outline-container-org6ab4e1a" class="outline-3">
-<h3 id="org6ab4e1a"><span class="section-number-3">7.6</span> Freeze proceedures</h3>
+<div id="outline-container-org312cee1" class="outline-3">
+<h3 id="org312cee1"><span class="section-number-3">7.6</span> Freeze proceedures</h3>
 <div class="outline-text-3" id="text-7-6">
 <ul class="org-ul">
 <li>check whether all undocumented commands
@@ -892,8 +897,8 @@ Emacs cycle)?</li>
 </div>
 </div>
 
-<div id="outline-container-org3cbb653" class="outline-3">
-<h3 id="org3cbb653"><span class="section-number-3">7.7</span> Release</h3>
+<div id="outline-container-org2503c92" class="outline-3">
+<h3 id="org2503c92"><span class="section-number-3">7.7</span> Release</h3>
 <div class="outline-text-3" id="text-7-7">
 <ul class="org-ul">
 <li>Add the latest news from NEWS.org to the README.org</li>
@@ -929,12 +934,12 @@ Dieter
 </div>
 </div>
 
-<div id="outline-container-org8282cf0" class="outline-3">
-<h3 id="org8282cf0"><span class="section-number-3">7.8</span> Ideas for further versions</h3>
+<div id="outline-container-org345d709" class="outline-3">
+<h3 id="org345d709"><span class="section-number-3">7.8</span> Ideas for further versions</h3>
 <div class="outline-text-3" id="text-7-8">
 </div>
-<div id="outline-container-orga4b274c" class="outline-4">
-<h4 id="orga4b274c"><span class="section-number-4">7.8.1</span> Parameter help and documentation</h4>
+<div id="outline-container-org7a6fed3" class="outline-4">
+<h4 id="org7a6fed3"><span class="section-number-4">7.8.1</span> Parameter help and documentation</h4>
 <div class="outline-text-4" id="text-7-8-1">
 <ul class="org-ul">
 <li>Enable a mouse button to unhide hidden regions, enable an
@@ -978,8 +983,8 @@ their help strings of parameter help.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org1eff6cd" class="outline-4">
-<h4 id="org1eff6cd"><span class="section-number-4">7.8.2</span> Ansys process and interpreter buffer</h4>
+<div id="outline-container-org08afe00" class="outline-4">
+<h4 id="org08afe00"><span class="section-number-4">7.8.2</span> Ansys process and interpreter buffer</h4>
 <div class="outline-text-4" id="text-7-8-2">
 <p>
 example: gnuplot-mode
@@ -1040,8 +1045,8 @@ ansys lock file before starting a run</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org8a0a025" class="outline-4">
-<h4 id="org8a0a025"><span class="section-number-4">7.8.3</span> Skeletons, outline and abbrevs</h4>
+<div id="outline-container-org7290d5c" class="outline-4">
+<h4 id="org7290d5c"><span class="section-number-4">7.8.3</span> Skeletons, outline and abbrevs</h4>
 <div class="outline-text-4" id="text-7-8-3">
 <ul class="org-ul">
 <li>show a preview buffer with the outline headlines</li>
@@ -1075,8 +1080,8 @@ must *go:label be unambiguous?</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgf2709f6" class="outline-4">
-<h4 id="orgf2709f6"><span class="section-number-4">7.8.4</span> Miscellaneous</h4>
+<div id="outline-container-org2f79f5b" class="outline-4">
+<h4 id="org2f79f5b"><span class="section-number-4">7.8.4</span> Miscellaneous</h4>
 <div class="outline-text-4" id="text-7-8-4">
 <ul class="org-ul">
 <li>hash or signature file for packages</li>
@@ -1167,8 +1172,8 @@ programming).</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org9b01478" class="outline-4">
-<h4 id="org9b01478"><span class="section-number-4">7.8.5</span> Ansys syntax restrictions not (yet) accounted for</h4>
+<div id="outline-container-orgf7808e9" class="outline-4">
+<h4 id="orgf7808e9"><span class="section-number-4">7.8.5</span> Ansys syntax restrictions not (yet) accounted for</h4>
 <div class="outline-text-4" id="text-7-8-5">
 <ul class="org-ul">
 <li>Parentheses can only be nested 4 levels deep and only up to 9
@@ -1185,8 +1190,8 @@ with /INPUT and *USE)</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org8b9dc01" class="outline-4">
-<h4 id="org8b9dc01"><span class="section-number-4">7.8.6</span> Unknown Ansys stuff</h4>
+<div id="outline-container-org4fa1948" class="outline-4">
+<h4 id="org4fa1948"><span class="section-number-4">7.8.6</span> Unknown Ansys stuff</h4>
 <div class="outline-text-4" id="text-7-8-6">
 <ul class="org-ul">
 <li>what the heck is the *UILIST command?</li>
@@ -1200,7 +1205,7 @@ with /INPUT and *USE)</li>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: H. Dieter Wilhelm (<a href="mailto:dieter@ping">dieter@ping</a>)</p>
-<p class="date">Date: Time-stamp: <span class="timestamp-wrapper"><span class="timestamp">&lt;2021-08-31 Di&gt;</span></span></p>
+<p class="date">Date: Time-stamp: <span class="timestamp-wrapper"><span class="timestamp">&lt;2021-09-09 Do&gt;</span></span></p>
 <p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3)</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
