--- a/info/NEWS.html
+++ b/info/NEWS.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-09-09 Do 17:53 -->
+<!-- 2021-09-09 Do 23:43 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -252,23 +252,23 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org5e20bd5">1. Version 20.6.0, 15 years of APDL-Mode!</a></li>
-<li><a href="#org4637390">2. Version 20.5.0</a></li>
-<li><a href="#org4c0deb2">3. Version 20.4.0</a></li>
-<li><a href="#org9be9e22">4. Version 20.3.0</a></li>
-<li><a href="#orgaaca1c6">5. Version 20.2.0</a></li>
-<li><a href="#org59bb5bb">6. Version 20.1.1</a></li>
-<li><a href="#orge98ea01">7. Version 20.1.0</a></li>
-<li><a href="#org5fa7c8e">8. Version 162-1</a></li>
-<li><a href="#org83196d1">9. Version 16.1.1</a></li>
-<li><a href="#org3867e51">10. Version 15.0.1</a></li>
-<li><a href="#org25c62d8">11. Version 14.5.2</a></li>
-<li><a href="#orgacb06e9">12. Version 14.5.1</a></li>
-<li><a href="#orgae7d929">13. Version 14.0.1</a></li>
-<li><a href="#orgc488318">14. Version 13.0.1</a></li>
-<li><a href="#org8a4796e">15. Version 12.0.1</a></li>
-<li><a href="#org9464c05">16. Version 11.0.2</a></li>
-<li><a href="#orgc96aa97">17. ansys-mode.el 11.0.1</a></li>
+<li><a href="#org915f54b">1. Version 20.6.0, 15 years of APDL-Mode!</a></li>
+<li><a href="#orge5a1e4d">2. Version 20.5.0</a></li>
+<li><a href="#org678506e">3. Version 20.4.0</a></li>
+<li><a href="#orgb2f6cab">4. Version 20.3.0</a></li>
+<li><a href="#org9f8b8a8">5. Version 20.2.0</a></li>
+<li><a href="#org1ddaf78">6. Version 20.1.1</a></li>
+<li><a href="#org30dda70">7. Version 20.1.0</a></li>
+<li><a href="#orgb97b6d9">8. Version 162-1</a></li>
+<li><a href="#org5b91ad5">9. Version 16.1.1</a></li>
+<li><a href="#org78b4298">10. Version 15.0.1</a></li>
+<li><a href="#org6e68a37">11. Version 14.5.2</a></li>
+<li><a href="#org1201e13">12. Version 14.5.1</a></li>
+<li><a href="#org6e09ed8">13. Version 14.0.1</a></li>
+<li><a href="#org024e845">14. Version 13.0.1</a></li>
+<li><a href="#org2c198ed">15. Version 12.0.1</a></li>
+<li><a href="#orgd5cc303">16. Version 11.0.2</a></li>
+<li><a href="#org4eb6008">17. ansys-mode.el 11.0.1</a></li>
 </ul>
 </div>
 </div>
@@ -276,8 +276,8 @@ for the JavaScript code in this tag.
 Copyright (C) 2006 - 2021  H. Dieter Wilhelm, GPL V3
 </p>
 
-<div id="outline-container-org5e20bd5" class="outline-2">
-<h2 id="org5e20bd5"><span class="section-number-2">1</span> Version 20.6.0, 15 years of APDL-Mode!</h2>
+<div id="outline-container-org915f54b" class="outline-2">
+<h2 id="org915f54b"><span class="section-number-2">1</span> Version 20.6.0, 15 years of APDL-Mode!</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li>Implemented batch runs (now C-c C-y) and jobname.out inspection</li>
@@ -291,8 +291,8 @@ having a file under `apdl-mode')</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org4637390" class="outline-2">
-<h2 id="org4637390"><span class="section-number-2">2</span> Version 20.5.0</h2>
+<div id="outline-container-orge5a1e4d" class="outline-2">
+<h2 id="orge5a1e4d"><span class="section-number-2">2</span> Version 20.5.0</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 2020-05, help for get- and parametric functions
@@ -310,8 +310,8 @@ the numbers is displaying the definition in the APDL Buffer.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org4c0deb2" class="outline-2">
-<h2 id="org4c0deb2"><span class="section-number-2">3</span> Version 20.4.0</h2>
+<div id="outline-container-org678506e" class="outline-2">
+<h2 id="org678506e"><span class="section-number-2">3</span> Version 20.4.0</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 2020-04, Updated for Ansys 2020R1
@@ -328,8 +328,8 @@ apdl-mode without further user configuration.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org9be9e22" class="outline-2">
-<h2 id="org9be9e22"><span class="section-number-2">4</span> Version 20.3.0</h2>
+<div id="outline-container-orgb2f6cab" class="outline-2">
+<h2 id="orgb2f6cab"><span class="section-number-2">4</span> Version 20.3.0</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 2020-03, Melpa installation
@@ -348,8 +348,8 @@ parameters</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgaaca1c6" class="outline-2">
-<h2 id="orgaaca1c6"><span class="section-number-2">5</span> Version 20.2.0</h2>
+<div id="outline-container-org9f8b8a8" class="outline-2">
+<h2 id="org9f8b8a8"><span class="section-number-2">5</span> Version 20.2.0</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 2020-03, Updated keywords to Ansys v195
@@ -371,8 +371,8 @@ because of speed reasons.</li>
 </div>
 </div>
 
-<div id="outline-container-org59bb5bb" class="outline-2">
-<h2 id="org59bb5bb"><span class="section-number-2">6</span> Version 20.1.1</h2>
+<div id="outline-container-org1ddaf78" class="outline-2">
+<h2 id="org1ddaf78"><span class="section-number-2">6</span> Version 20.1.1</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 2020-02, Bugfix release
@@ -385,8 +385,8 @@ because of speed reasons.</li>
 </div>
 </div>
 
-<div id="outline-container-orge98ea01" class="outline-2">
-<h2 id="orge98ea01"><span class="section-number-2">7</span> Version 20.1.0</h2>
+<div id="outline-container-org30dda70" class="outline-2">
+<h2 id="org30dda70"><span class="section-number-2">7</span> Version 20.1.0</h2>
 <div class="outline-text-2" id="text-7">
 <p>
 Released  2020-02
@@ -405,8 +405,8 @@ Q - quit license buffer</li>
 </div>
 </div>
 
-<div id="outline-container-org5fa7c8e" class="outline-2">
-<h2 id="org5fa7c8e"><span class="section-number-2">8</span> Version 162-1</h2>
+<div id="outline-container-orgb97b6d9" class="outline-2">
+<h2 id="orgb97b6d9"><span class="section-number-2">8</span> Version 162-1</h2>
 <div class="outline-text-2" id="text-8">
 <p>
 not yet released, targeted for Sep 2015
@@ -439,8 +439,8 @@ code line.</li>
 </div>
 </div>
 
-<div id="outline-container-org83196d1" class="outline-2">
-<h2 id="org83196d1"><span class="section-number-2">9</span> Version 16.1.1</h2>
+<div id="outline-container-org5b91ad5" class="outline-2">
+<h2 id="org5b91ad5"><span class="section-number-2">9</span> Version 16.1.1</h2>
 <div class="outline-text-2" id="text-9">
 <p>
 July 2015
@@ -474,8 +474,8 @@ example.mac.  Included an example.dat and example.anf</li>
 </div>
 </div>
 
-<div id="outline-container-org3867e51" class="outline-2">
-<h2 id="org3867e51"><span class="section-number-2">10</span> Version 15.0.1</h2>
+<div id="outline-container-org78b4298" class="outline-2">
+<h2 id="org78b4298"><span class="section-number-2">10</span> Version 15.0.1</h2>
 <div class="outline-text-2" id="text-10">
 <p>
 Aug 2014
@@ -496,8 +496,8 @@ e. g. partial solutions with psolve for mass calculations.</li>
 </div>
 </div>
 
-<div id="outline-container-org25c62d8" class="outline-2">
-<h2 id="org25c62d8"><span class="section-number-2">11</span> Version 14.5.2</h2>
+<div id="outline-container-org6e68a37" class="outline-2">
+<h2 id="org6e68a37"><span class="section-number-2">11</span> Version 14.5.2</h2>
 <div class="outline-text-2" id="text-11">
 <p>
 Mar 2013
@@ -537,8 +537,8 @@ added a beam simulation template</li>
 </div>
 </div>
 
-<div id="outline-container-orgacb06e9" class="outline-2">
-<h2 id="orgacb06e9"><span class="section-number-2">12</span> Version 14.5.1</h2>
+<div id="outline-container-org1201e13" class="outline-2">
+<h2 id="org1201e13"><span class="section-number-2">12</span> Version 14.5.1</h2>
 <div class="outline-text-2" id="text-12">
 <p>
 Sep 2012
@@ -604,8 +604,8 @@ under the nint() entry</li>
 </div>
 </div>
 
-<div id="outline-container-orgae7d929" class="outline-2">
-<h2 id="orgae7d929"><span class="section-number-2">13</span> Version 14.0.1</h2>
+<div id="outline-container-org6e09ed8" class="outline-2">
+<h2 id="org6e09ed8"><span class="section-number-2">13</span> Version 14.0.1</h2>
 <div class="outline-text-2" id="text-13">
 <p>
 June 2012
@@ -636,8 +636,8 @@ additionally the installation directory (ansys-install-directory).</li>
 </div>
 </div>
 
-<div id="outline-container-orgc488318" class="outline-2">
-<h2 id="orgc488318"><span class="section-number-2">14</span> Version 13.0.1</h2>
+<div id="outline-container-org024e845" class="outline-2">
+<h2 id="org024e845"><span class="section-number-2">14</span> Version 13.0.1</h2>
 <div class="outline-text-2" id="text-14">
 <p>
 March 2011
@@ -660,8 +660,8 @@ etc. to release 13.0 of Ansys, as usual.</li>
 </div>
 </div>
 
-<div id="outline-container-org8a4796e" class="outline-2">
-<h2 id="org8a4796e"><span class="section-number-2">15</span> Version 12.0.1</h2>
+<div id="outline-container-org2c198ed" class="outline-2">
+<h2 id="org2c198ed"><span class="section-number-2">15</span> Version 12.0.1</h2>
 <div class="outline-text-2" id="text-15">
 <p>
 Dec 2010
@@ -707,8 +707,8 @@ transition from other editors</li>
 </div>
 </div>
 
-<div id="outline-container-org9464c05" class="outline-2">
-<h2 id="org9464c05"><span class="section-number-2">16</span> Version 11.0.2</h2>
+<div id="outline-container-orgd5cc303" class="outline-2">
+<h2 id="orgd5cc303"><span class="section-number-2">16</span> Version 11.0.2</h2>
 <div class="outline-text-2" id="text-16">
 <p>
 Nov 2009
@@ -725,8 +725,8 @@ ansys-query-ansys-command (C-c C-q).</li>
 </div>
 </div>
 
-<div id="outline-container-orgc96aa97" class="outline-2">
-<h2 id="orgc96aa97"><span class="section-number-2">17</span> ansys-mode.el 11.0.1</h2>
+<div id="outline-container-org4eb6008" class="outline-2">
+<h2 id="org4eb6008"><span class="section-number-2">17</span> ansys-mode.el 11.0.1</h2>
 <div class="outline-text-2" id="text-17">
 <p>
 2009 in comparison to ansys-mod.el,
